# arm-assembly

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  main.S  main.c  startup.S
config/: stm32l476.ld
inc/: GPIO.inc  RCC.inc  SCB.inc  TIM.inc  dac.inc  dma.inc  nvic.inc  scb.inc  syst.inc
src/GPIO/: CMakeLists.txt  GPIO_PA5_init.S
src/SYST/: CMakeLists.txt  SysTick_init.S
src/TIM/: CMakeLists.txt  TIM2_init.S  TIM3_init.S
src/gpio/: CMakeLists.txt  gpio_init.S
src/sysTick/: CMakeLists.txt  sysTick_init.S
src/tim/: CMakeLists.txt  tim_init.S
